--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">videoEditor</string>
-    <string name="title_activity_main">videoEditor</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">Simple Video Editor</string>
+    <string name="title_activity_main">Simple Video Editor</string>
+    <string name="package_name">chan.util.simpleVideoEditor</string>
+    <string name="custom_url_scheme">chan.util.simpleVideoEditor</string>
 </resources>
